# pilot-space

./: .gitignore  .impeccable.md  .pre-commit-config.yaml  CLAUDE.md  KG_DOCS_INDEX.md  KNOWLEDGE_GRAPH_DIAGRAMS.md  KNOWLEDGE_GRAPH_FLOW.md  KNOWLEDGE_GRAPH_QUICK_REF.md  KNOWLEDGE_GRAPH_README.md  LICENSE  Makefile  README.md  ROADMAP.md  STATE.md  docker-compose.yml
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml  nightly.yml  pilot-cli-build.yml  tauri-build.yml  tauri-release.yml  upgrade-simulation.yml
.pilot/: deep-context.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-alpha-MILESTONE-AUDIT.md  v1.0-alpha-REQUIREMENTS.md
authcore/: README.md
backend/: .env.development  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt  ruff.toml
backend/alembic/: env.py
cli/: pyproject.toml
docs/: BUSINESS_CONTEXT.md  DEPLOYMENT_GUIDE.md  DESIGN_DECISIONS.md  FEATURES_MAP.md
frontend/: CLAUDE.md  QUEUE_MODE_INTEGRATION.md  next.config.ts  package.json  pnpm-lock.yaml
scripts/: audit_enqueue_actor_user_id.py
tauri-app/: README.md
tauri-app/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src-tauri/src/commands/: auth.rs  git.rs  mod.rs  sidecar.rs  terminal.rs  tray.rs  workspace.rs
(+1790 files in other folders)
